# ChangeLog for dev-libs/libusb
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.122 2012/01/01 18:27:53 grobian Exp $

  01 Jan 2012; Fabian Groffen <grobian@gentoo.org> libusb-1.0.8.ebuild:
  Fix bashism in configure script causing build-failure when using non-bash
  CONFIG_SHELL.

  06 Dec 2011; Robin H. Johnson <robbat2@gentoo.org> libusb-0.1.12-r5.ebuild,
  libusb-0.1.12-r6.ebuild, libusb-0.1.12-r7.ebuild:
  Drop the DTD reference mangling. I introduced it myself in 0.1.12-r1, in
  April 2007, when the SGML catalog was in much worse shape. Fixes bug #390509
  that was causing network access for fetching the DTD otherwise.

  03 Dec 2011; Raúl Porcel <armin76@gentoo.org> libusb-0.1.12-r7.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #390441

  23 Nov 2011; Markus Meier <maekke@gentoo.org> libusb-0.1.12-r7.ebuild:
  arm stable, bug #390441

  17 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> libusb-0.1.12-r7.ebuild:
  x86 stable wrt bug #390441

  15 Nov 2011; Markos Chandras <hwoarang@gentoo.org> libusb-0.1.12-r7.ebuild:
  Stable on amd64 wrt bug #390441

  15 Nov 2011; Jeroen Roovers <jer@gentoo.org> libusb-0.1.12-r7.ebuild:
  Stable for HPPA (bug #390441).

  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r7.ebuild:
  Use URL to find dockbook dtd rather than filesystem path.

  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r7.ebuild:
  Convert USE=nocxx to USE=cxx.

  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> -libusb-0.1.11.ebuild,
  -libusb-0.1.12.ebuild, -libusb-0.1.12-r1.ebuild, -libusb-0.1.12-r2.ebuild,
  -libusb-0.1.12-r3.ebuild, -libusb-0.1.12-r4.ebuild, -libusb-1.0.1.ebuild,
  -libusb-1.0.2.ebuild, -libusb-1.0.3.ebuild, -libusb-1.0.4.ebuild,
  -libusb-1.0.5.ebuild, -libusb-1.0.6.ebuild, -libusb-1.0.7.ebuild:
  Punt old ebuilds.

  28 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> libusb-0.1.12-r7.ebuild,