@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libusb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.122 2012/01/01 18:27:53 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.123 2012/01/09 06:53:36 ssuominen Exp $
+
+  09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> libusb-0.1.12-r7.ebuild:
+  ppc/ppc64 stable wrt #390441
 
   01 Jan 2012; Fabian Groffen <grobian@gentoo.org> libusb-1.0.8.ebuild:
   Fix bashism in configure script causing build-failure when using non-bash
